kubernetes-ingress/ing2/pathroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
  namespace: app2
  labels:
    app.kubernetes.io/name: app2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: hostapp.ocelottraining.com
    http:
      paths:
      - pathType: Prefix
        path: /app2
        backend:
          service:
            name: app2-svc
            port: 
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress
  namespace: app1
  labels:
    app.kubernetes.io/name: app1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: hostapp.ocelottraining.com
    http:
      paths:
      - pathType: Prefix
        path: /app1
        backend:
          service:
            name: app1-svc
            port: 
              number: 80
